I forgot remove this everytime

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -52,7 +52,7 @@ jobs:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
 
       - name: Compile
-        run: haxelib run lime build android -D NO_PRECOMPILED_HEADERS -armv7 -final"
+        run: haxelib run lime build android -D NO_PRECOMPILED_HEADERS -armv7 -final
 
       - name: Upload Artifact
         uses: actions/upload-artifact@main
@@ -108,7 +108,7 @@ jobs:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
 
       - name: Compile
-        run: haxelib run lime build android -D NO_PRECOMPILED_HEADERS -arm64 -final"
+        run: haxelib run lime build android -D NO_PRECOMPILED_HEADERS -arm64 -final
 
       - name: Upload Artifact
         uses: actions/upload-artifact@main
