--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,118 +4,6 @@ on:
     branches: [ main ]
   workflow_dispatch:
 jobs:
-  build32:
-    name: build32
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@main
-
-      - name: Setup Android NDK
-        id: setup-ndk
-        uses: nttld/setup-ndk@main
-        with:
-          ndk-version: r21e
-
-      - name: Setup Java JDK
-        uses: actions/setup-java@main
-        with:
-          distribution: 'temurin'
-          java-version: 11
-
-      - name: Setup Haxe
-        uses: krdlab/setup-haxe@v1.2.0
-        with:
-          haxe-version: 4.2.0
-
-      - name: Install Haxelib
-        run: |
-          haxelib setup ~/haxelib
-          haxelib install hmm --quiet
-          haxelib run hmm install --quiet
-      - name: Create Version Tag
-        run: echo "${{github.run_id}}" > VERSION
-
-      - name: Setup Lime
-        run: |
-          haxelib run lime setup -alias -y
-          haxelib run lime config ANDROID_SDK $ANDROID_HOME
-          haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_HOME
-          haxelib run lime config JAVA_HOME $JAVA_HOME
-          haxelib run lime config ANDROID_SETUP true
-          haxelib set lime 7.9.0
-          haxelib set openfl 9.1.0
-          haxelib set flixel 4.11.0
-          haxelib set flixel-addons 2.11.0
-          haxelib set hxcpp 4.2.1
-        env:
-          ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
-
-      - name: Compile
-        run: haxelib run lime build android -D NO_PRECOMPILED_HEADERS -armv7 -final
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@main
-        with:
-          name: Build32
-          path: export/release/android/bin/app/build/outputs/apk/release/*.apk
-          if-no-files-found: warn
-  build64:
-    name: build64
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@main
-
-      - name: Setup Android NDK
-        id: setup-ndk
-        uses: nttld/setup-ndk@main
-        with:
-          ndk-version: r21e
-
-      - name: Setup Java JDK
-        uses: actions/setup-java@main
-        with:
-          distribution: 'temurin'
-          java-version: 11
-
-      - name: Setup Haxe
-        uses: krdlab/setup-haxe@v1.2.0
-        with:
-          haxe-version: 4.2.0
-
-      - name: Install Haxelib
-        run: |
-          haxelib setup ~/haxelib
-          haxelib install hmm --quiet
-          haxelib run hmm install --quiet
-      - name: Create Version Tag
-        run: echo "${{github.run_id}}" > VERSION
-
-      - name: Setup Lime
-        run: |
-          haxelib run lime setup -alias -y
-          haxelib run lime config ANDROID_SDK $ANDROID_HOME
-          haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_HOME
-          haxelib run lime config JAVA_HOME $JAVA_HOME
-          haxelib run lime config ANDROID_SETUP true
-          haxelib set lime 7.9.0
-          haxelib set openfl 9.1.0
-          haxelib set flixel 4.11.0
-          haxelib set flixel-addons 2.11.0
-          haxelib set hxcpp 4.2.1
-        env:
-          ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
-
-      - name: Compile
-        run: haxelib run lime build android -D NO_PRECOMPILED_HEADERS -arm64 -final
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@main
-        with:
-          name: Build64
-          path: export/release/android/bin/app/build/outputs/apk/release/*.apk
-          if-no-files-found: warn
   iOS:
     runs-on: macos-13
     steps:
@@ -132,6 +20,14 @@ jobs:
           haxelib setup ~/haxelib
           haxelib install hmm --quiet
           haxelib run hmm install --quiet
+      
+      - name: Build with Xcode
+        run: |
+          xcodebuild -project PsychEngine.xcodeproj \
+          -scheme PsychEngine \
+          -configuration Release \
+          IPHONEOS_DEPLOYMENT_TARGET=15.0 \
+          ARCHS=arm64
 
       - name: Compile
         run: haxelib run lime build ios
