--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,15 +19,10 @@ jobs:
         run: |
           haxelib setup ~/haxelib
           haxelib install hmm --quiet
-          haxelib run hmm install --quiet
-      
-      - name: Build with FuckBoy
-        run: |
-          IPHONEOS_DEPLOYMENT_TARGET=15.0 \
-          ARCHS=arm64
+          haxelib run hmm install --quiet  
 
       - name: Compile
-        run: haxelib run lime build ios
+        run: haxelib run lime build ios IPHONEOS_DEPLOYMENT_TARGET=15.0 ARCHS=arm64
 
       - name: Make Ipa
         run: |
