--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,7 @@ on:
   pull_request:
     branches: [ main ]
   workflow_dispatch:
+
 jobs:
   iOS:
     runs-on: macos-13
@@ -19,10 +20,18 @@ jobs:
         run: |
           haxelib setup ~/haxelib
           haxelib install hmm --quiet
-          haxelib run hmm install --quiet  
+          haxelib run hmm install --quiet
+
+      # chatgpt
+      - name: Modify Xcode Project Settings
+        run: |
+          # Update deployment target to iOS 12.0
+          plutil -replace IPHONEOS_DEPLOYMENT_TARGET -string "12.0" export/release/ios/PsychEngine.xcodeproj/project.pbxproj
+          # Remove armv7 architecture
+          sed -i '' 's/armv7//g' export/release/ios/PsychEngine.xcodeproj/project.pbxproj
 
       - name: Compile
-        run: haxelib run lime build ios IPHONEOS_DEPLOYMENT_TARGET=15.0 ARCHS=arm64
+        run: haxelib run lime build ios
 
       - name: Make Ipa
         run: |
