--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,9 @@ jobs:
       - name: Modify Xcode Project Settings
         run: |
           # Update deployment target to iOS 12.0
-          plutil -replace IPHONEOS_DEPLOYMENT_TARGET -string "12.0" export/release/ios/PsychEngine.xcodeproj/project.pbxproj
+          plutil -replace IPHONEOS_DEPLOYMENT_TARGET -string "12.0" export/release/ios/PsychEngine.xcodeproj
           # Remove armv7 architecture
-          sed -i '' 's/armv7//g' export/release/ios/PsychEngine.xcodeproj/project.pbxproj
+          sed -i '' 's/armv7//g' export/release/ios/PsychEngine.xcodeproj
 
       - name: Compile
         run: haxelib run lime build ios
