--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@main
+        with:
+          persist-credentials: false
+
+      - name: Configure git
+        run: |
+          git config --global url."https://${TOKEN}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
+          git config --global user.name "prohack101010"
+          git config --global user.email "gerek832626@gmail.com"
+        env:
+          TOKEN: ${{ secrets.GH_TOKEN }}
 
       - name: Setup Haxe
         uses: krdlab/setup-haxe@master
@@ -18,20 +28,11 @@ jobs:
 
       - name: Install Libraries
         run: |
-          haxelib setup ~/haxelib
           haxelib install hmm --quiet
           haxelib run hmm install --quiet
 
-      # chatgpt
-      - name: Modify Xcode Project Settings
-        run: |
-          # Update deployment target to iOS 12.0
-          plutil -replace IPHONEOS_DEPLOYMENT_TARGET -string "12.0" export/release/ios/PsychEngine.xcodeproj
-          # Remove armv7 architecture
-          sed -i '' 's/armv7//g' export/release/ios/PsychEngine.xcodeproj
-
       - name: Compile
-        run: haxelib run lime build ios
+        run: haxelib run lime build ios -nosign -arm64
 
       - name: Make Ipa
         run: |
